update authors file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file shows all individuals who contributed content to the repository.
 
 Jedidiah Favour <jedidahfavour@gmail.com>
+Clinton Ogolla <clintonmcogolla@gmail.com>
